# uncurl-x

./: README.md  activate.ps1  pyproject.toml
.github/workflows/: python-test.yml
tests/: constants.py  test_api.py  test_main.py
tests/data/: basic_get.json  basic_headers.json  colons_in_headers.json  cookies.json  cookies_with_dollar_sign.json  parse_curl_with_binary_data.json  post_with_data.json  post_with_dict_data.json  simple_post.json
uncurlx/: __init__.py  __main__.py  api.py  ast_api.py
